--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -17,8 +17,8 @@
         android:text=""
         tools:layout_editor_absoluteX="31dp"
         tools:layout_editor_absoluteY="360dp"
+        android:layout_marginTop="19dp"
         android:layout_below="@+id/textView"
-        android:layout_marginTop="32dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true" />
 
@@ -36,10 +36,19 @@
         android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="27dp"
+        android:layout_marginStart="12dp"
         android:text="Start chat"
-        android:layout_alignParentBottom="true"
+        android:layout_below="@+id/editText"
         android:layout_alignParentStart="true"
-        android:layout_marginBottom="17dp" />
+        android:layout_marginTop="13dp" />
+
+    <EditText
+        android:id="@+id/editText2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:text="55000"
+        android:layout_alignParentBottom="true" />
 
 </RelativeLayout>
