--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -11,29 +11,28 @@
     <EditText
         android:id="@+id/editText"
         android:layout_width="320dp"
-        android:layout_height="73dp"
+        android:layout_height="50dp"
         android:ems="10"
         android:inputType="textPersonName"
         android:text=""
         tools:layout_editor_absoluteX="31dp"
         tools:layout_editor_absoluteY="360dp"
-        android:layout_alignBottom="@+id/button"
+        android:layout_above="@+id/button"
         android:layout_alignParentStart="true"
-        android:layout_marginBottom="48dp"
         android:layout_alignParentEnd="true" />
 
 
     <ScrollView   android:layout_width="match_parent"
-        android:layout_height="5sp"
+        android:layout_height="12sp"
         android:id="@+id/scrollView"
         android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_above="@+id/editText">
+        android:layout_above="@+id/editText"
+        android:layout_alignParentTop="true">
     <TextView
         android:id="@+id/textView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="TextView"
+        android:text=""
         tools:layout_editor_absoluteY="20dp"
         tools:layout_editor_absoluteX="30dp"
         android:layout_alignParentEnd="true"
@@ -45,20 +44,40 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Start chat"
-        android:layout_marginBottom="15dp"
-        android:layout_above="@+id/editText2"
+        android:layout_above="@+id/txtPORT"
         android:layout_alignParentStart="true" />
 
     <EditText
-        android:id="@+id/editText2"
+        android:id="@+id/txtID"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:ems="2"
+        android:inputType="textPersonName"
+        android:text="-1"
+        android:layout_alignParentBottom="true"
+        android:layout_toEndOf="@+id/textView2"
+        android:layout_marginStart="22dp" />
+
+    <EditText
+        android:id="@+id/txtPORT"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignEnd="@+id/button"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="12145"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true" />
+        android:text="19011" />
 
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="12pt"
+        android:text="ID:"
+        android:layout_alignParentBottom="true"
+        android:layout_toEndOf="@+id/txtPORT"
+        android:layout_marginStart="77dp" />
 
 
 </RelativeLayout>
