Берет картинку из одного imageView, отправляет на сервер - принимает и вставляет ее в другой imageView. Подстраивается под размеры imageView

--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -22,23 +22,6 @@
         android:layout_alignParentEnd="true" />
 
 
-    <ScrollView   android:layout_width="match_parent"
-        android:layout_height="12sp"
-        android:id="@+id/scrollView"
-        android:layout_alignParentStart="true"
-        android:layout_above="@+id/editText"
-        android:layout_alignParentTop="true">
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text=""
-        tools:layout_editor_absoluteY="20dp"
-        tools:layout_editor_absoluteX="30dp"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentStart="true" />
-    </ScrollView>
-
     <Button
         android:id="@+id/button"
         android:layout_width="wrap_content"
@@ -67,7 +50,7 @@
         android:layout_alignParentStart="true"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="19011" />
+        android:text="19702" />
 
     <TextView
         android:id="@+id/textView2"
@@ -78,6 +61,47 @@
         android:layout_alignParentBottom="true"
         android:layout_toEndOf="@+id/txtPORT"
         android:layout_marginStart="77dp" />
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="50dp"
+        android:layout_height="20dp"
+
+        android:layout_alignBottom="@+id/imageView2"
+        android:layout_toStartOf="@+id/txtID"
+        android:layout_marginEnd="11dp"
+        android:layout_below="@+id/editText" />
+
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/txtID"
+        android:layout_alignEnd="@+id/txtID"
+        app:srcCompat="@mipmap/ic_launcher" />
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:fillViewport="true"
+        android:layout_above="@+id/editText"
+        android:id="@+id/scrollView2">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:weightSum="1">
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="382dp"
+            android:layout_height="match_parent"
+            android:text=""
+            android:layout_above="@+id/editText"
+            android:layout_weight="0.71" />
+
+        </LinearLayout>
+
+    </ScrollView>
+
 
 
 </RelativeLayout>
